tests/fixtures/valid/loop_continue_diverges.torel
unit fixtures.loop_continue_diverges;

export proc main() -> Int32 {
    loop {
        continue;
    }
}
